# django_cradmin

./: .coveragerc  .editorconfig  .gitignore  .sass-lint.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  django_cradmin_testsettings.py  django_cradmin_testurls.py  fabfile.py  manage.py  pyproject.toml  pytest.ini  recreate-virtualenv.sh  requirements.txt  run_invoke.py  setup.py  tasks.py  tox.ini
.tx/: config
cradmin_demo/: db.sqlite3  fabfile.py  manage.py  tasks.py
cradmin_demo/cradmin_demo/: urls.py
cradmin_demo/cradmin_demo/polls_demo/: admin.py  cradmin.py  models.py  tests.py  urls.py
cradmin_demo/cradmin_demo/project/: settings.py  urls.py
cradmin_demo/cradmin_demo/usermanagerdemo/: cradmin.py
cradmin_demo/cradmin_demo/webdemo/: admin.py  cradmin.py  models.py  urls.py
django_cradmin/: __init__.py  appconfig.py  automodelform.py  context_processors.py  cradmin_testhelpers.py  crapp.py  crbreadcrumb.py  crfooter.py  crheader.py  crinstance.py  crispylayouts.py  crmenu.py  crsettings.py  css_icon_map.py  datetimeutils.py  decorators.py  delay_middleware.py  imageutils.py  messages_debug_middleware.py  python2_compatibility.py  registry.py  renderable.py  urlutils.py  version.json
django_cradmin/acemarkdown/: widgets.py
django_cradmin/apps/: __init__.py
django_cradmin/apps/cradmin_activate_account/: urls.py  utils.py
django_cradmin/django_cradmin_testapp/: models.py
django_cradmin/formfields/: email_list.py
django_cradmin/imageutils/: __init__.py
django_cradmin/javascriptregistry/: __init__.py  component.py  default_componentids.py  registry.py  viewmixin.py
django_cradmin/modelhelpers/: sortable.py
django_cradmin/sortable/: admin.py  models.py
django_cradmin/staticsources/: .editorconfig
django_cradmin/superuserui/: superuserui_registry.py
django_cradmin/templatetags/: cradmin_icon_tags.py  cradmin_image_tags.py  cradmin_javascriptregistry_tags.py  cradmin_tags.py  cradmin_textformatting_tags.py  cradmin_uimock_tags.py
django_cradmin/tests/: helpers.py  test_abstract_renderable.py  test_urlutils.py
django_cradmin/uicontainer/: __init__.py  base.py  blocklist.py  button.py  container.py  convenience.py  field.py  field_help_text.py  fieldset.py  fieldwrapper.py  filterlist.py  foreignkeyfield.py  form.py  form_mixins.py  help_text.py  label.py  layout.py  manytomanyfield.py  messagecontainer.py  messagescontainer.py  nothing.py  semantic.py  text.py  typography.py  utils.py
django_cradmin/utils/: cradmin_collections.py  cradmin_ievvbuildstatic.py  crhumanize.py  deprecation_decorators.py  nulls_last_queryset.py
django_cradmin/viewhelpers/: __init__.py  bulkfileupload.py  create.py  crudbase.py  delete.py  detail.py  formbase.py  generic.py  listbuilderview.py  mixins.py  multiselect.py  multiselect2view.py  objecttable.py  uimock.py  update.py
django_cradmin/views/: roleselect.py
django_cradmin/widgets/: datetimepicker.py  filewidgets.py  modelchoice.py  modelmultichoice.py  rangeinput.py  selectwidgets.py
django_cradmin/wysihtml5/: __init__.py  widgets.py
docs/: .gitignore  Makefile  account-apps-overview.rst  apps.cradmin_activate_account.rst  apps.cradmin_authenticate.rst  apps.cradmin_email.rst  apps.cradmin_generic_token_with_metadata.rst  apps.cradmin_invite.rst  apps.cradmin_passwordreset.rst  apps.cradmin_register_account.rst  apps.cradmin_resetpassword.rst  apps.cradmin_secure_user_token.rst  apps.cradmin_user_single_use_token.rst  conf.py  cradmin_lockdown.rst  cradmin_testhelpers.rst  crapp.rst  crbreadcrumb.rst  crhumanize.rst  crinstance.rst  crmenu.rst  databasedumps.rst  datetimepicker.rst  delay_middleware.rst  develop.rst  fabfile.py  foreignkeywidgets.rst  gettingstartedguide.rst  gettingstartedguide_part_two.rst  i18n.rst  imageutils.rst  index.rst  install.rst  locale.rst  make.bat  messages_debug_middleware.rst  newbie.rst  release.rst  renderable.rst  settings.rst  (+24 more)
docs/cradmin_listbuilder_guide/: index.rst  listbuilder_introduction.rst
docs/cradmin_pagination_guide/: pagination.rst
docs/guide_gettingstarted/: gettingstartedguide.rst  gettingstartedguide_part_two.rst  index.rst
docs/releasenotes/: releasenotes-1.0.0-beta.019.rst  releasenotes-1.0.0-beta.020.rst  releasenotes-1.0.0-beta.021.rst  releasenotes-1.0.0-beta.022.rst  releasenotes-1.1.0.rst  releasenotes-1.1.1.rst  releasenotes-2.0.0.rst  releasenotes-3.0.0.rst  releasenotes-4.0.0.rst  releasenotes-5.0.0.rst  releasenotes-5.1.0.rst  releasenotes-5.2.0.rst  releasenotes-5.2.1.rst  releasenotes-5.3.0.rst  releasenotes-6.0.0.rst  releasenotes-6.0.1.rst  releasenotes-6.1.0.rst  releasenotes-6.10.0.rst  releasenotes-6.11.0.rst  releasenotes-6.2.0.rst  releasenotes-6.3.0.rst  releasenotes-6.6.3.rst  releasenotes-6.6.4.rst  releasenotes-6.7.0.rst  releasenotes-7.0.0.rst
releasenotes/: releasenotes-1.1.0.rst  releasenotes-10.md  releasenotes-2.0.0.rst  releasenotes-5.1.0.rst  releasenotes-5.2.2.rst  releasenotes-6.0.2.rst  releasenotes-6.0.3.rst  releasenotes-6.6.0.rst  releasenotes-6.8.0.rst  releasenotes-6.md  releasenotes-7.md  releasenotes-8.md  releasenotes-9.md
requirements/: common.txt  develop.gitpackages.txt  python2.txt  python3.txt
tools/: recreate-virtualenv.sh
(+2173 files in other folders)
