[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cradmin"
dynamic = ["version"]
description = "A role based admin UI for Django that produces a user friendly and beautiful UI."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Espen Angell Kristiansen", email = "post@appresso.no" },
    { name = "Tor Johansen" },
    { name = "Vegard Angell" },
    { name = "Magne Westlie" },
]
maintainers = [
    { name = "Espen Angell Kristiansen", email = "post@appresso.no" },
    { name = "Tor Johansen", email = "post@appresso.no" },
    { name = "Stian Julseth", email = "stian@appresso.no" },
    { name = "Eskil Nordland", email = "eskil@appresso.no" },
    { name = "Jim Nordal", email = "jim@appresso.no" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    "Django>=4.0.0,<5.0.0",
    "html2text",
    "ievv_opensource>=9.2.0,<10.0.0",
    "appresso-sphinx-extensions",
    "djangorestframework",
    "importlib-metadata",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "flake8",
    "tox",
    "twine",
    "Markdown",
    "Pygments",
    "beautifulsoup4",
    "html5lib",
    "pythonkss",
    "mock-django",
    "sphinx",
    "sphinx-rtd-theme",
    "psycopg2",
    "django-dbdev",
]
test = [
    "coverage",
    "django-debug-toolbar",
    "htmls",
    "model-bakery",
    "pytest",
    "pytest-django",
    "pytest-env",
]

[project.urls]
Homepage = "https://github.com/appressoas/django_cradmin"

[tool.hatch.version]
path = "django_cradmin/__init__.py"

[tool.hatch.build]
packages = [
    "/django_cradmin",
]
exclude = [
    "/django_cradmin/demo",
    "node_modules",
    "/django_cradmin/apps/django_cradmin_styles/staticsources/django_cradmin_styles/yarn.lock",
    "/django_cradmin/apps/django_cradmin_styles/staticsources/django_cradmin_styles/package.json",
    "/django_cradmin/apps/django_cradmin_styles/staticsources/django_cradmin_styles/ievv_buildstatic.appconfig.json",
]
artifacts = [
    "/django_cradmin/apps/django_cradmin_js/static/",
    "/django_cradmin/apps/django_cradmin_styles/static/",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "10.2.1"
version_files = [
    "django_cradmin/__init__.py:__version__"
]
tag_format = "$version"
update_changelog_on_bump = true
